- Invalidate password after email or password changing; - Added Redis to store JWT tokens; - Updated and added new endpoints to openapi.yaml; - Updating user questionnaire.
