# src/main/java/ua/kpi/mishchenko/mentoringsystem/domain/bo/AuthenticationRequest.java
@@ -1,17 +1,0 @@
-package ua.kpi.mishchenko.mentoringsystem.domain.bo;
-
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-import lombok.Data;
-
-@Data
-public class AuthenticationRequest {
-
-    @NotNull
-    @Size(min = 5, max = 50)
-    private String email;
-
-    @NotNull
-    @Size(min = 10, max = 20)
-    private String password;
-}
